Update Criminality, Ethnicity, Deportation.ipynb

--- a/scripts/Criminality, Ethnicity, Deportation.ipynb
+++ b/scripts/Criminality, Ethnicity, Deportation.ipynb
@@ -44,7 +44,7 @@
     "    #keywords to associate with categories\n",
     "    drug_keywords = ['drug', 'marijuana', 'narcotic', 'liquor', 'cocaine', 'heroin', 'opium', 'amphetamine', 'hallucinogen', 'obscene material']\n",
     "    sex_keywords = ['sex', 'indecent exposure', 'molest', 'rape', 'prostitute', 'prostitution', 'incest', 'seduction', 'bestiality', 'adultery', 'lewd', 'lascivious', 'voyeur', 'peeping tom']\n",
-    "    attack_keywords = ['viisolence', 'assault', 'battery', 'homicide', 'kill', 'murder', 'manslaughter', 'threat to', 'weapon', 'arson', 'threaten', 'gun', 'kidnap', 'terroris']\n",
+    "    attack_keywords = ['violence', 'assault', 'battery', 'homicide', 'kill', 'murder', 'manslaughter', 'threat to', 'weapon', 'arson', 'threaten', 'gun', 'kidnap', 'terroris']\n",
     "    traffic_keywords = ['traffic', 'driv', 'road', 'vehic', 'car', 'hit and run']\n",
     "    legal_keywords = ['officer', 'police', 'interfere', 'obstruct', 'failing to appear', 'licensing', 'probation', 'justice', 'failure to appear']\n",
     "    immigration_keywords = ['immigra', 'alien', 'illegal entry', 'illegal re-entry', 'illegal arrest', 'pass forged', 'false citizenship']\n",
