--- a/scripts/consolidated notebooks/Legislative Pathways.ipynb
+++ b/scripts/consolidated notebooks/Legislative Pathways.ipynb
@@ -8,7 +8,7 @@
     "# <b> The Worst Criminal Charges</b>\n",
     "#### <i> & how they correlate with demographic data</i>\n",
     "\n",
-    "todo: <b><u><span style=\"color:red\">add alt text</span></u> & convert multi-line bar charts to overlapped bars (NOT stacked)</b>"
+    "todo: <b><u><span style=\"color:red\">add alt text</span></u> & convert multi-line bar charts to stacked/overlapped</b>"
    ]
   },
   {
@@ -397,36 +397,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "id": "70b7c349-9c79-4247-bfd6-c1df01261a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn as sk\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "def mse_deported(arr, predictors):\n",
+    "    arrests = arr\n",
+    "    \n",
+    "    X = predictors\n",
+    "    y = ~arrests[\"Departure Country\"].isna()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .2)\n",
+    "    \n",
+    "    algo = sk.linear_model.LogisticRegression()\n",
+    "    model = algo.fit(X_train, y_train)\n",
+    "    \n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    return sk.metrics.mean_squared_error(y_pred, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "10abc950-aa24-4bdc-bd88-6d0e0fd714d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_108164/2969822116.py:2: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  arrests.Convicted = arrests.Convicted.fillna(False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arrests = arrests_original\n",
+    "arrests.Convicted = arrests.Convicted.fillna(False)\n",
+    "\n",
+    "hisp_conv = arrests[[\"Hispanic\", \"Convicted\"]]\n",
+    "hisp_char = arrests[[\"Hispanic\", \"Charged\"]]\n",
+    "conv_char = arrests[[\"Charged\", \"Convicted\"]]\n",
+    "hisp_conv_char = arrests[[\"Hispanic\", \"Convicted\", \"Charged\"]]\n",
+    "\n",
+    "arrests[\"Gender Dummy\"] = arrests.Gender== \"Male\"\n",
+    "arrests[\"From USA\"] = arrests[\"Citizenship Country\"] == \"United States\"\n",
+    "arrests[\"From Mexico\"] = arrests[\"Citizenship Country\"] == \"Mexico\"\n",
+    "hisp_full_demographics = arrests[[\"Hispanic\", \"Convicted\", \"Charged\", \"Gender Dummy\", \"From USA\", \"From Mexico\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "bd8455f8-3ad9-4bde-a947-23fd43ef6f79",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE:  0.229925059059124\n",
-      "Arrests in Prison:  24.016 %\n"
+      "Hispanic & Charged MSE:  0.22975400142154795\n",
+      "Hispanic & Convicted MSE:  0.2283147578502184\n",
+      "Hispanic, Charged, & Convicted MSE:  0.18938734822321251\n",
+      "Hispanic, Charged, Convicted, Gender, Country of Origin MSE:  0.18790976414690902\n",
+      "Charged & Convicted MSE:  0.18522887806834637\n",
+      "\n",
+      "Arrests in Jails & Prisons:  24.016 %\n"
      ]
     }
    ],
    "source": [
-    "import sklearn as sk\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "print (\"Hispanic & Charged MSE: \", mse_deported(arrests, hisp_char))\n",
+    "print (\"Hispanic & Convicted MSE: \", mse_deported(arrests, hisp_conv))\n",
+    "print (\"Hispanic, Charged, & Convicted MSE: \", mse_deported(arrests, hisp_conv_char))\n",
+    "print (\"Hispanic, Charged, Convicted, Gender, Country of Origin MSE: \", mse_deported(arrests, hisp_full_demographics))\n",
+    "print (\"Charged & Convicted MSE: \", mse_deported(arrests, conv_char))\n",
     "\n",
-    "arrests = arrests_original\n",
-    "\n",
-    "X = arrests[[\"Hispanic\", \"Charged\"]]\n",
-    "y = ~arrests[\"Departure Country\"].isna()\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .2)\n",
-    "\n",
-    "algo = sk.linear_model.LogisticRegression()\n",
-    "model = algo.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "print(\"MSE: \", sk.metrics.mean_squared_error(y_pred, y_test))\n",
-    "print(\"Arrests in Prison: \", round(arrests[\"Apprehension Site Landmark\"].str.lower().str.contains(\"jail|prison\").sum()\\\n",
+    "print(\"\\nArrests in Jails & Prisons: \", round(arrests[\"Apprehension Site Landmark\"].str.lower().str.contains(\"jail|prison\").sum()\\\n",
     "            /arrests[\"Apprehension Site Landmark\"].size*100, 3), \"%\")"
    ]
   },
@@ -435,7 +486,7 @@
    "id": "a7444c49-d0b6-4ecf-9e05-af1205d138d9",
    "metadata": {},
    "source": [
-    "<br>This MSE of <b>0.23</b> shows that the two factors of Criminality & Hispanic identity together are a strong predictor of whether an individual was deported. This is entierly within expectations, given <b><u>24.016%</b></u> of arrests across the entire dataset were made in prisons or jails (alongside the knowledge of the aformentioned geography of the USA)\n",
+    "<br>This MSE of <b>0.185</b> shows that the two factors of Criminality & Conviction together are a strong predictor of whether an individual was deported, moreso than any other demographic inf. This is entierly within expectations, given <b><u>24.016%</b></u> of arrests across the entire dataset were made in prisons or jails (alongside the knowledge of the aformentioned geography of the USA)\n",
     "<br><br>\n",
     "This tells us that a very significant avenue to ICE encounters and deportation is criminalization and incarceration. This could demonstrate that one substantial avenue to inhibiting deportations and protecting at-risk groups is reducing entry into the CJS in the first place. This is not easily or immediately actionable, though diversion programs & community mutual-aid may be places to start (in fact, they are already places in which significant work has already been occuring). \n",
     "<br><br>\n",
