--- a/scripts/consolidated notebooks/Legislative Pathways.ipynb
+++ b/scripts/consolidated notebooks/Legislative Pathways.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "source": [
     "# <b> The Worst Criminal Charges</b>\n",
-    "#### <i> & how they correlate with demographic data</i>\n",
-    "\n",
-    "todo: <b><u><span style=\"color:red\">add alt text</span></u> & convert multi-line bar charts to stacked/overlapped</b>"
+    "#### <i> & how they correlate with demographic data</i>\n"
    ]
   },
   {
